[project]
name = "amul-stock-checker"
version = "0.1.0"
description = ""
authors = [
    {name = "Naveen"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.32.4)",
    "selenium (==4.34.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
